@@ -1,0 +1,2 @@
+This package provides client identification and session support for zope.publisher's
+request objects.
