@@ -4,7 +4,7 @@ parts = test py
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.session [test]
+eggs = zope.session
 
 [py]
 recipe = zc.recipe.egg
